[gd_scene load_steps=28 format=3 uid="uid://qicqb3g6owtj"]

[ext_resource type="Shader" path="res://scenes/nuit.gdshader" id="1_6schm"]
[ext_resource type="PackedScene" uid="uid://dy07gw77tsaue" path="res://scenes/house/immeuble.tscn" id="1_08rpx"]
[ext_resource type="Script" path="res://scenes/world/world.gd" id="1_vok7g"]
[ext_resource type="PackedScene" uid="uid://c30dm700paorp" path="res://scenes/house/maison_bleue.tscn" id="2_2ek0f"]
[ext_resource type="Texture2D" uid="uid://cismcwbafogcs" path="res://assets/maskvide.png" id="2_iyly2"]
[ext_resource type="PackedScene" uid="uid://c8csrmegbsxhf" path="res://scenes/house/maison_rouge.tscn" id="3_hlfdj"]
[ext_resource type="PackedScene" uid="uid://deym8dkb2pokv" path="res://scenes/house/maison_jaune.tscn" id="4_7701m"]
[ext_resource type="PackedScene" uid="uid://cpqngcmkmtkxk" path="res://scenes/house/house.tscn" id="5_pwkoy"]
[ext_resource type="PackedScene" uid="uid://dbetcucbuq726" path="res://scenes/player/player.tscn" id="6_1w2bk"]
[ext_resource type="PackedScene" uid="uid://gmg71yk5wc2o" path="res://scenes/hazards/car/CarSpawner.tscn" id="7_otisb"]
[ext_resource type="Texture2D" uid="uid://krvjqa0x3wih" path="res://assets/road.png" id="7_s70g1"]
[ext_resource type="PackedScene" uid="uid://m17wjiq3t5l1" path="res://scenes/hazards/block/block.tscn" id="8_3iyxq"]
[ext_resource type="PackedScene" uid="uid://bjhdovtkoafey" path="res://scenes/loupe/loupe.tscn" id="9_njd3f"]
[ext_resource type="PackedScene" uid="uid://dpnojl70n0bw7" path="res://scenes/echaffaudage/echauf2.tscn" id="9_q5ncd"]
[ext_resource type="PackedScene" uid="uid://bo8nlgfjpcuko" path="res://scenes/plant/plant.tscn" id="10_8fvrx"]
[ext_resource type="Texture2D" uid="uid://dwxmcb085iauk" path="res://assets/shadow.png" id="13_j0mbw"]
[ext_resource type="PackedScene" uid="uid://dw6ogyreqsc7r" path="res://scenes/pool.tscn" id="14_2o8j1"]
[ext_resource type="PackedScene" uid="uid://b0b2vluqwafga" path="res://scenes/props/Beennn.tscn" id="14_mvakx"]
[ext_resource type="PackedScene" uid="uid://bps0el8daeilj" path="res://scenes/lampadaire.tscn" id="15_7bdgl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wtvfj"]
shader = ExtResource("1_6schm")
shader_parameter/day = true
shader_parameter/mask = ExtResource("2_iyly2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2ac6"]
size = Vector2(4000, 156)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_unan1"]
size = Vector2(4000, 157)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhoka"]
size = Vector2(159.5, 620)

[sub_resource type="Animation" id="Animation_2sai3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%DeathLabel:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ec3l6"]
resource_name = "fade in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_jgw0c"]
resource_name = "fade out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%DeathLabel:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5fvhu"]
_data = {
"RESET": SubResource("Animation_2sai3"),
"fade in": SubResource("Animation_ec3l6"),
"fade out": SubResource("Animation_jgw0c")
}

[node name="World" type="Node2D"]
y_sort_enabled = true
material = SubResource("ShaderMaterial_wtvfj")
script = ExtResource("1_vok7g")

[node name="Background" type="ColorRect" parent="."]
z_index = -20
z_as_relative = false
use_parent_material = true
offset_left = -1717.0
offset_top = -392.0
offset_right = 3403.0
offset_bottom = 701.0
color = Color(0.921569, 0.980392, 0.894118, 1)

[node name="CarSpawnWest" type="Marker2D" parent="."]
position = Vector2(-1712, 199)

[node name="CarSpawnEast" type="Marker2D" parent="."]
position = Vector2(3178, 175)

[node name="HouseInteriorCamera" type="Camera2D" parent="."]
position = Vector2(65, 309)
zoom = Vector2(4.4, 4.4)

[node name="House" parent="." instance=ExtResource("5_pwkoy")]
position = Vector2(24, 323)
scale = Vector2(1.34286, 1.34286)

[node name="Exterior" parent="House" index="2"]
visible = false

[node name="PlayerSpawn" type="Marker2D" parent="House"]
unique_name_in_owner = true
position = Vector2(-40.2127, 34.2552)

[node name="Player" parent="." instance=ExtResource("6_1w2bk")]
unique_name_in_owner = true
position = Vector2(23, 373)

[node name="Road" type="Sprite2D" parent="."]
z_index = -1
z_as_relative = false
texture_filter = 1
texture_repeat = 2
use_parent_material = true
position = Vector2(643, 195)
scale = Vector2(1.28, 1)
texture = ExtResource("7_s70g1")
region_enabled = true
region_rect = Rect2(0, 0, 4000, 48)

[node name="Border" type="Node2D" parent="."]
use_parent_material = true

[node name="SouthWall" type="StaticBody2D" parent="Border"]
scale = Vector2(1.00671, 1.15101)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/SouthWall"]
position = Vector2(541, 470)
shape = SubResource("RectangleShape2D_d2ac6")

[node name="NorthWall" type="StaticBody2D" parent="Border"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/NorthWall"]
position = Vector2(541, -306.5)
shape = SubResource("RectangleShape2D_unan1")

[node name="WestWall" type="StaticBody2D" parent="Border"]
scale = Vector2(1, 1.17827)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/WestWall"]
position = Vector2(-1379.5, 82)
shape = SubResource("RectangleShape2D_xhoka")

[node name="EastWall" type="StaticBody2D" parent="Border"]
scale = Vector2(1.00272, 1.16799)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/EastWall"]
position = Vector2(2461.25, 82)
shape = SubResource("RectangleShape2D_xhoka")

[node name="Interactable" type="Node2D" parent="."]
use_parent_material = true

[node name="Loupe" parent="Interactable" instance=ExtResource("9_njd3f")]
use_parent_material = true
position = Vector2(791, 360)
scale = Vector2(1.41281, 1.41281)

[node name="Plant" parent="Interactable" instance=ExtResource("10_8fvrx")]
position = Vector2(24, 333)

[node name="CarSpawner" parent="Interactable" node_paths=PackedStringArray("player", "CarSpawnWest", "CarSpawnEast") instance=ExtResource("7_otisb")]
position = Vector2(0, 0)
player = NodePath("../../Player")
CarSpawnWest = NodePath("../../CarSpawnWest")
CarSpawnEast = NodePath("../../CarSpawnEast")

[node name="Block" parent="Interactable" instance=ExtResource("8_3iyxq")]
use_parent_material = true
position = Vector2(867, 6)

[node name="StaticBody2D" parent="Interactable" instance=ExtResource("9_q5ncd")]
position = Vector2(1052, 283)

[node name="Batiments" type="Node2D" parent="."]
y_sort_enabled = true
use_parent_material = true

[node name="Maison Rouge" parent="Batiments" instance=ExtResource("3_hlfdj")]
use_parent_material = true
position = Vector2(1138, 54)

[node name="Maison Bleue" parent="Batiments" instance=ExtResource("2_2ek0f")]
use_parent_material = true
position = Vector2(-167, -55)

[node name="Immeuble" parent="Batiments" instance=ExtResource("1_08rpx")]
use_parent_material = true
position = Vector2(849, -91)

[node name="Maison Jaune" parent="Batiments" instance=ExtResource("4_7701m")]
use_parent_material = true
position = Vector2(1311, 35)

[node name="Immeuble2" parent="Batiments" instance=ExtResource("1_08rpx")]
use_parent_material = true
position = Vector2(1070, -87)

[node name="Maison Jaune2" parent="Batiments" instance=ExtResource("4_7701m")]
use_parent_material = true
position = Vector2(770, -173)

[node name="Immeuble 3" parent="Batiments" instance=ExtResource("1_08rpx")]
use_parent_material = true
position = Vector2(584, 309)

[node name="Maison Bleue 3" parent="Batiments" instance=ExtResource("2_2ek0f")]
use_parent_material = true
position = Vector2(892, 292)

[node name="Maison Bleue 4" parent="Batiments" instance=ExtResource("2_2ek0f")]
use_parent_material = true
position = Vector2(266, 365)

[node name="Maison Rouge 3" parent="Batiments" instance=ExtResource("3_hlfdj")]
use_parent_material = true
position = Vector2(739, 257)

[node name="Maison Jaune 2" parent="Batiments" instance=ExtResource("4_7701m")]
use_parent_material = true
position = Vector2(424, 316)

[node name="Immeuble 1" parent="Batiments" instance=ExtResource("1_08rpx")]
use_parent_material = true
position = Vector2(58, -67)

[node name="Immeuble 2" parent="Batiments" instance=ExtResource("1_08rpx")]
use_parent_material = true
position = Vector2(453, 15)

[node name="Maison Bleue 1" parent="Batiments" instance=ExtResource("2_2ek0f")]
use_parent_material = true
position = Vector2(756, 46)

[node name="Maison Bleue 2" parent="Batiments" instance=ExtResource("2_2ek0f")]
use_parent_material = true
position = Vector2(160, 48)

[node name="Maison Rouge 1" parent="Batiments" instance=ExtResource("3_hlfdj")]
use_parent_material = true
position = Vector2(-59, 63)

[node name="Maison Rouge 2" parent="Batiments" instance=ExtResource("3_hlfdj")]
use_parent_material = true
position = Vector2(605, 38)

[node name="Maison Jaune 1" parent="Batiments" instance=ExtResource("4_7701m")]
use_parent_material = true
position = Vector2(313, 10)

[node name="Pool" parent="Batiments" instance=ExtResource("14_2o8j1")]
position = Vector2(1116, 386)
collision_mask = 1

[node name="Maison Rouge2" parent="Batiments" instance=ExtResource("3_hlfdj")]
use_parent_material = true
position = Vector2(669, 439)

[node name="Maison Bleue 5" parent="Batiments" instance=ExtResource("2_2ek0f")]
use_parent_material = true
position = Vector2(518, 398)

[node name="Immeuble 4" parent="Batiments" instance=ExtResource("1_08rpx")]
use_parent_material = true
position = Vector2(812, 501)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(29.12, 16.36)
color = Color(0, 0, 0, 0)

[node name="DeathLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="DeathScreenAnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_5fvhu")
}

[node name="Shadow" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-3, 5)
scale = Vector2(1.61547, 1.61547)
texture = ExtResource("13_j0mbw")

[node name="Props" type="Node2D" parent="."]
use_parent_material = true
position = Vector2(113, 131)
scale = Vector2(0.72, 0.72)

[node name="Beennn" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true

[node name="Beennn2" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(26.3889, 0)

[node name="Beennn3" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(-102.778, -109.722)

[node name="Beennn4" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(-370.833, -38.8889)

[node name="Beennn5" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(-370.833, -23.6111)

[node name="Beennn6" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(-370.833, -9.72222)

[node name="Beennn7" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(306.944, -69.4444)

[node name="Beennn8" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(536.111, 4.16667)

[node name="Beennn9" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(119.444, 234.722)

[node name="Beennn10" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(145.833, 240.278)

[node name="Beennn11" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(126.389, 250)

[node name="Beennn12" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(298.611, 230.556)

[node name="Beennn13" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(288.889, 244.444)

[node name="Beennn14" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(958.333, -4.16667)

[node name="Beennn18" parent="Props/Beennn14" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(-148.611, 300)

[node name="Beennn17" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(784.722, 295.833)

[node name="Beennn15" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(1275, -131.944)

[node name="Beennn20" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(802.778, 311.111)

[node name="Beennn16" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(759.722, 300)

[node name="Beennn19" parent="Props" instance=ExtResource("14_mvakx")]
use_parent_material = true
position = Vector2(773.611, 312.5)

[node name="Area2D" parent="Props" instance=ExtResource("15_7bdgl")]
use_parent_material = true
position = Vector2(138.889, 8.33334)

[node name="Area2D2" parent="Props" instance=ExtResource("15_7bdgl")]
use_parent_material = true
position = Vector2(405.556, 11.1111)

[node name="Area2D3" parent="Props" instance=ExtResource("15_7bdgl")]
use_parent_material = true
position = Vector2(713.889, -20.8333)

[node name="Area2D4" parent="Props" instance=ExtResource("15_7bdgl")]
use_parent_material = true
position = Vector2(831.944, 8.33334)

[node name="Area2D5" parent="Props" instance=ExtResource("15_7bdgl")]
use_parent_material = true
position = Vector2(-334.722, 8.33334)

[node name="Area2D6" parent="Props" instance=ExtResource("15_7bdgl")]
use_parent_material = true
position = Vector2(-693.056, 8.33334)

[node name="Area2D7" parent="Props" instance=ExtResource("15_7bdgl")]
use_parent_material = true
position = Vector2(-655.556, 176.389)

[node name="Area2D8" parent="Props" instance=ExtResource("15_7bdgl")]
use_parent_material = true
position = Vector2(-47.2222, 129.167)

[node name="Area2D9" parent="Props" instance=ExtResource("15_7bdgl")]
use_parent_material = true
position = Vector2(330.556, 175)

[node name="Area2D10" parent="Props" instance=ExtResource("15_7bdgl")]
use_parent_material = true
position = Vector2(-368.056, 169.444)

[node name="Area2D11" parent="Props" instance=ExtResource("15_7bdgl")]
use_parent_material = true
position = Vector2(569.444, 169.444)

[node name="Area2D12" parent="Props" instance=ExtResource("15_7bdgl")]
use_parent_material = true
position = Vector2(1137.5, 152.778)

[node name="Area2D13" parent="Props" instance=ExtResource("15_7bdgl")]
use_parent_material = true
position = Vector2(1341.67, -1.38889)

[connection signal="area_entered" from="House/InteriorDetect" to="." method="_on_interior_detect_area_entered"]
[connection signal="area_exited" from="House/InteriorDetect" to="Player" method="_on_interior_detect_area_exited"]
[connection signal="player_dead" from="House/Door" to="." method="_on_player_death"]
[connection signal="interactloupe" from="Interactable/Loupe" to="." method="deathloupe"]
[connection signal="plant_cut" from="Interactable/Plant" to="." method="_on_player_death"]
[connection signal="player_death" from="Interactable/CarSpawner" to="." method="_on_player_death"]
[connection signal="player_death" from="Interactable/Block" to="." method="_on_player_death"]
[connection signal="played_ded_echaff" from="Interactable/StaticBody2D" to="." method="_on_player_death"]

[editable path="House"]
[editable path="Player"]
